<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.motty.mapin_android.InquiryActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="31dp"
            android:text="@string/inquiry"
            android:textColor="@android:color/black"
            android:textSize="26sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="94dp"
            android:lineSpacingExtra="4sp"
            android:text="@string/sentence"
            android:textIsSelectable="false"
            android:layout_alignLeft="@+id/textView2"
            android:layout_alignStart="@+id/textView2"
            android:layout_alignRight="@+id/textView2"
            android:layout_alignEnd="@+id/textView2" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="42dp"
            android:background="@drawable/spinner_design"

            android:entries="@array/spinner"
            android:layout_below="@+id/view4"
            android:layout_alignLeft="@+id/editText"
            android:layout_alignStart="@+id/editText"
            android:layout_alignRight="@+id/editText"
            android:layout_alignEnd="@+id/editText" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="13dp" />

        <View
            android:id="@+id/view2"
            android:layout_width="wrap_content"
            android:layout_height="3px"
            android:layout_marginTop="70dp"
            android:background="@color/black"
            android:layout_alignRight="@+id/view4"
            android:layout_alignEnd="@+id/view4"
            android:layout_alignLeft="@+id/view4"
            android:layout_alignStart="@+id/view4" />

        <View
            android:id="@+id/view4"
            android:layout_width="wrap_content"
            android:layout_height="3px"
            android:layout_marginTop="190dp"
            android:background="@color/black"
            android:layout_alignLeft="@+id/editText"
            android:layout_alignStart="@+id/editText"
            android:layout_alignRight="@+id/editText"
            android:layout_alignEnd="@+id/editText" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="370dp"
            android:layout_height="180dp"
            android:background="@drawable/line"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/input_form"
            android:layout_below="@+id/view4"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="65dp" />
    </RelativeLayout>

</RelativeLayout>



